# spatial-mi-border-zone-model

./: .gitignore  .zenodo.json  CITATION.cff  FILE_MANIFEST.tsv  LICENSE  README.md  RELEASE_CHECKLIST.md  pyproject.toml  requirements.txt
config/: demo_boundary.json  external_validation_manifest.tsv  kuppe_primary_cellxgene_manifest.tsv  protocol_schema.json
demo/: README.md  mouse_master_spot_scores.tsv
documents/: code_reproducibility_readme.md  figure_legends.md  manuscript.md  submission_strategy.md
figures/: Figure_1_spatial_boundary_modelling_framework.tiff
scripts/: additional_independence_analyses.py  analyze_gse214611_domain34_spatial_features.py  annotate_therapeutic_candidates.py  audit_gse214611_metadata.py  audit_signatures_and_sensitivity.py  batch_map_gse214611_mi_spatial_risk.py  benchmark_cross_study_spatial_model.py  compute_human_therapeutic_support.py  compute_mouse_therapeutic_spatial_evidence.py  download_spatial_mi_external_validation.py  external_public_evidence_inventory.py  external_spatial_validation_utils.py  final_reviewer_upgrade_analyses.py  generate_file_manifest.py  interpret_gse214611_domains.py  map_gse214611_d7_1_spatial_risk.py  map_mouse_human_orthologues.py  pharmacology_evidence_clients.py  plot_additional_independence_checks.py  plot_bib_main_figures.py  plot_cross_study_external_validation.py  plot_cvr_human_stemi_transfer.py  plot_cvr_spatial_statistics.py  plot_final_reviewer_upgrade_checks.py  plot_gse214611_domain34_boundary_maps.py  plot_gse214611_signature_score_maps.py  plot_nature_public_data_robustness.py  (+16 more)
(+346 files in other folders)
