[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sstba"
version = "0.5.0"
description = "Frozen spatial-state scoring and boundary analysis"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scipy>=1.10",
]

[project.optional-dependencies]
test = ["pytest>=8"]

[project.scripts]
sstba = "sstba.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
